# ApiSet

./: CMakeLists.txt  LICENSE  README.md  apiset.c  apiset.h  apiset.sln  apiset.vcxproj  apiset.vcxproj.filters  main.c  nls.c  ntapi.h  ntpsapi.h  ntrtl.h  ntstatus.h  pebteb.h  resolve.c  string.c  unicode.c
